--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,15 @@ export(esp_hist)
 export(esp_hist_long)
 export(esp_metrics)
 export(esp_overall_score)
+export(esp_stock_options)
 export(esp_traffic)
 export(esp_traffic_long)
 export(esp_traffic_tab)
 export(esp_traffic_tab_long)
+export(get_esp_data)
 export(label_facets)
+export(label_status)
+export(list_indicators)
 export(make_traffic_plot)
 export(render_esp)
 export(render_fig)
