--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(label_facets)
 export(label_status)
 export(list_indicators)
 export(make_traffic_plot)
+export(prep_ind_data)
 export(render_esp)
 export(render_fig)
 export(render_ref)
