add indicator ordering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(esp_traffic_long)
 export(esp_traffic_tab)
 export(esp_traffic_tab_long)
 export(get_esp_data)
+export(join_order)
 export(label_facets)
 export(list_indicators)
 export(make_traffic_plot)
