--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,6 +4,12 @@ pkgdown_sha: ~
 articles:
   create-ESP: create-ESP.html
   create-figures: create-figures.html
+  create-report-card: create-report-card.html
   create-tables: create-tables.html
-last_built: 2021-10-27T17:43Z
+  install-package: install-package.html
+  query-data: query-data.html
+last_built: 2021-10-27T18:51Z
+urls:
+  reference: https://atyrell.github.io/AKesp//reference
+  article: https://atyrell.github.io/AKesp//articles
 
