create option to use files from google drive

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(render_fig)
 export(render_ref)
 export(render_rpt_card)
 export(render_tab)
+export(use_google_files)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
