--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -8,7 +8,8 @@ articles:
   create-tables: create-tables.html
   install-package: install-package.html
   query-data: query-data.html
-last_built: 2022-02-24T20:18Z
+  use-google: use-google.html
+last_built: 2022-04-07T15:52Z
 urls:
   reference: https://atyrell.github.io/AKesp//reference
   article: https://atyrell.github.io/AKesp//articles
