--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,12 @@ Imports:
     ggplot2,
     ggcorrplot,
     ggforce,
+    ggnewscale,
     ggpubr,
     httr,
     knitr,
     magrittr,
+    png,
     rlang,
     rmarkdown,
     scales,
