render bookdown SOP function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(label_facets)
 export(list_indicators)
 export(one_pager)
 export(prep_ind_data)
+export(render_AKesp_book)
 export(render_esp)
 export(render_fig)
 export(render_ref)
