--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export(check_data)
 export(create_template)
-export(esp_cor_matrix_long)
-export(esp_hist_long)
+export(esp_cor_matrix)
+export(esp_hist)
 export(esp_metrics)
 export(esp_overall_score)
 export(esp_stock_options)
-export(esp_traffic_long)
-export(esp_traffic_tab_long)
+export(esp_traffic)
+export(esp_traffic_tab)
 export(get_esp_data)
 export(join_order)
 export(label_facets)
@@ -19,7 +19,6 @@ export(render_AKesp_book)
 export(render_esp)
 export(render_fig)
 export(render_ref)
-export(render_rpt_card)
 export(render_tab)
 export(use_google_files)
 importFrom(magrittr,"%>%")
