--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,8 +7,9 @@ articles:
   create-tables: create-tables.html
   install-package: install-package.html
   query-data: query-data.html
+  update-pkg: update-pkg.html
   use-google: use-google.html
-last_built: 2023-05-12T21:39Z
+last_built: 2023-05-17T15:58Z
 urls:
   reference: https://atyrell.github.io/AKesp/reference
   article: https://atyrell.github.io/AKesp/articles
