--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,7 +19,9 @@ navbar:
          href: articles/query-data.html
       -  text: "Create figures"
          href: articles/create-figures.html
-      -  text: "Create tables"
+      -  text: "Create indicator tables"
+         href: articles/two_pager_indicator_table.html
+      -  text: "Create 'traffic light' tables"
          href: articles/create-tables.html
       -  text: "Create ESP reports"
          href: articles/create-ESP.html
@@ -43,17 +45,16 @@ reference:
   - title: Functions
   - subtitle: Create figures
     contents:
-      - '`esp_metrics`'
       - '`esp_cor_matrix`'
       - '`esp_hist`'
       - '`esp_traffic`'
       - '`esp_overall_score`'
   - subtitle: Create tables
     contents:
+      - '`create_indicator_table`'
       - '`esp_traffic_tab`'
-  - subtitle: Create various ESP reports
+  - subtitle: Create ESP report
     contents:
-      - '`create_template`'
       - '`render_esp`'
       - '`one_pager`'
   - subtitle: ESP report utilities
@@ -65,7 +66,6 @@ reference:
       - '`render_fig`'
       - '`render_tab`'
       - '`render_ref`'
-      - '`use_google_files`'
       - '`list_indicators`'
       - '`check_data`'
       - '`render_AKesp_book`'
@@ -75,5 +75,3 @@ reference:
       - '`metric_panel`'
       - '`indicator_order`'
 
-template:
-  package: preferably
