create new figure function and add to vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(render_esp)
 export(render_fig)
 export(render_ref)
 export(render_tab)
+export(rpt_card_timeseries)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
